test/lattests/extensions/objects1/bad/fieldVoidType.lat
class a {
    void x;
}

int main() { return 0; }